# FEM

./: Aggregation.cpp  Aggregation.h  Agregaction.cpp  Agregaction.h  CMakeLists.txt  Element.cpp  Element.h  FEM.cpp  FEM.h  GlobalData.cpp  GlobalData.h  Grid.cpp  Grid.h  Jakobian.cpp  Jakobian.h  MES.cpp  MES.vcxproj  MES.vcxproj.filters  Node.cpp  Node.h  data.txt  data1.txt  pch.h  universalElement.cpp  universalElement.h
Debug/: vc141.idb
Debug/MES.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MES.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
